refactor: 统一使用 jspecify 注解替代 spring 和 jakarta 注解 jetbrains
- 将所有 Nullable 和 NonNull 注解从 spring-framework 和 jakarta 包替换为 org.jspecify.annotations
- 更新了 import 语句以反映新的注解来源
- 修改了泛型类型参数和方法参数上的注解引用
- 删除了不再需要的 jakarta.annotation.Nonnull 导入
- 调整了部分注解的位置以适应新的语法要求
- 移除了部分冗余的 AutoConfigureBefore 配置类导入
- 添加了对 SqlInitializationProperties 的启用配置支持
- 更新了测试文件中的相关注解引用
- 修正了一个测试断言中关于虚拟线程 MDC 键值的期望值
- 增加了 AliasFor 注解以明确上下文变量注解的属性映射关系
- 引入了 ApplicationDataSourceScriptDatabaseInitializer 来初始化数据库脚本
- 优化了部分代码结构和依赖导入顺序